[build-system]
requires = [
    "poetry>=1.0",
    "setuptools>=30.3.0",
    "wheel",
]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "topalias"
version = "2.0.8"
description = "Linux bash alias generator"
license = "GPL-3.0-or-later"

authors = []

readme = "README.md"

repository = "https://github.com/CSRedRat/topalias"

keywords = []

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
Click = "^7.1"

[tool.poetry.dev-dependencies]
setuptools = "^50.3.2"
bump2version = "^1.0.1"

wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.3"
nitpick = "^0.23"

safety = "^1.9"

pytest = "^6.1"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"
coverage = "^5.3"

sphinx = "^2.2"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.7"

flake8 = "^3.8.4"
tox = "^3.20.1"
pylint = "^2.6.0"
black = "^20.8b1"
pre-commit = "^2.8.2"
isort = "<5"

requests = "^2.24.0"
BeautifulSoup4 = "^4.9.3"
html5lib = "^1.1"
